--- a/task1/task0001.html
+++ b/task1/task0001.html
@@ -14,7 +14,7 @@
     </ul>
     <h2 class="f14">这个二级标题</h2>
     <p class="f12 yellow bg_black">这是一个段落</p>
-    <img class="border" src="img/1.jpg"  width="100"/>
+    <img class="border w100" src="img/1.jpg" />
 </div>
 
 <div class="task6.1">
