--- a/task1/task0001.html
+++ b/task1/task0001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link href="css/task0001.css"  rel="stylesheet" />
+    <link href="css/style.css"  rel="stylesheet" />
 </head>
 <body>
 <div class="task1.1">
@@ -18,10 +18,65 @@
 </div>
 
 <div class="task6.1">
+    <h1>div居中</h1>
     <h2>方法一</h2>
-    <div class="center1"></div>
+    <p>margin:0 auto;</p>
+    <div class="center center1"></div>
     <h2>方法二</h2>
-    <div class="center2"></div>
+    <p>绝对定位,left:50%;margin-left:-480px</p>
+    <div class="center center2 clear"></div>
+
+    <h1>圆角矩形</h1>
+    <div class="w100">
+        <b class="xtop"><b class="xb1"></b><b class="xb2"></b><b class="xb3"></b><b class="xb4"></b></b>
+        <div class="border-radius"></div>
+        <b class="xbottom"><b class="xb4"></b><b class="xb3"></b><b class="xb2"></b><b class="xb1"></b></b>
+    </div>
+
+    <h1>两列布局</h1>
+    <p>方法一</p>
+    <div class="divA A_1">DIV-A</div>
+    <div class="divB B_1">DIV-B</div>
+    <div class="divC C_1">DIV-C</div>
+
+    <p>方法二</p>
+    <div class="divA A_2">DIV-A</div>
+    <div class="divB B_2">DIV-B</div>
+    <div class="divC C_2">DIV-C</div>
+
+    <h1>三列布局</h1>
+    <p>方法一</p>
+    <div class="divA A_3">DIV-A</div>
+    <div class="divC_3 C_3">DIV-C</div>
+    <div class="divB B_3">DIV-B</div>
+
+    <p>方法二</p>
+    <div class="divA A_4">DIV-A</div>
+    <div class="divC_3 C_4">DIV-C</div>
+    <div class="divB B_4">DIV-B</div>
+
+    <h1>浮动布局</h1>
+    <div class="red clear"  >
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+
+    </div>
+
 </div>
 </body>
 </html>
